# atproto-backup

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  build_docs.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: nextjs.yml  publish.yaml
docs/: next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/app/: _meta.tsx  app.css  layout.tsx  page.tsx
docs/app/[[...mdxPath]]/: page.jsx
docs/app/auth/complete/: page.tsx
docs/app/docs/[[...mdxPath]]/: page.jsx
docs/components/: icons.tsx
docs/content/: index.mdx
docs/content/guides/: workers.mdx
docs/public/: client_metadata.json
docs/public/.well-known/: atproto-did
public/: ATTRIBUTIONS.md
src/: App.css  App.tsx  Auth.tsx  localstorage_ployfill.ts  main.tsx
src-tauri/: Cargo.toml  lib.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  lib.rs  main.rs  tray.rs
src/components/: BackgroundTest.tsx  TestAutoBackup.tsx
src/components/ui/: copy-button.tsx  markdown-renderer.tsx
src/lib/: autoBackup.ts  backgroundBackup.ts  backup.ts  paths.ts  settings.ts  stats.ts  testAutoBackup.ts  testBackground.ts
src/routes/: Home.tsx  Login.tsx  Settings.tsx
