[package]
name = "atbackup"
version = "0.1.3"
description = "One-click bluesky backups"
authors = ["Turtlepaw"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "atproto_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
#tauri = { version = "2.0.0", features = [ "tray-i+con", "api-all", "devtools" ] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-websocket = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[profile.release]
debug = true

[profile.release.package.wry]
debug = true
debug-assertions = true
